--- a/src/components/landing/FinalCTA.module.css
+++ b/src/components/landing/FinalCTA.module.css
@@ -106,6 +106,7 @@
 
   .heading {
     font-size: 2.25rem;
+    margin-bottom: 1.25rem;
   }
 }
 
