--- a/src/components/landing/ProblemSolution.module.css
+++ b/src/components/landing/ProblemSolution.module.css
@@ -134,6 +134,7 @@
 
   .heading {
     font-size: 2.25rem;
+    margin-bottom: 1.25rem;
   }
 
   .inner {
